# libmodbus-rs

./: .coveralls.yml  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  TODO.md  appveyor.bat  appveyor.yml  generate-and-publish-documentation.sh  index.html  search-index.js
ansi_term/: enum.Colour.html  fn.ANSIByteStrings.html  fn.ANSIStrings.html  index.html  struct.ANSIGenericString.html  struct.ANSIGenericStrings.html  struct.Infix.html  struct.Prefix.html  struct.Style.html  struct.Suffix.html  type.ANSIByteString.html  type.ANSIByteStrings.html  type.ANSIString.html  type.ANSIStrings.html
atty/: enum.Stream.html  fn.is.html  fn.isnt.html  index.html
backtrace/: fn.resolve.html  fn.trace.html  index.html  struct.Backtrace.html  struct.BacktraceFrame.html  struct.BacktraceSymbol.html  struct.Frame.html  struct.Symbol.html  struct.SymbolName.html
backtrace_sys/: enum.backtrace_state.html  fn.backtrace_create_state.html  fn.backtrace_pcinfo.html  fn.backtrace_syminfo.html  index.html  type.backtrace_error_callback.html  type.backtrace_full_callback.html  type.backtrace_syminfo_callback.html
bitflags/: index.html  macro.bitflags.html
cfg_if/: index.html  macro.cfg_if.html
ci/: before_install.sh  install.bat
clap/: enum.AppSettings.html  enum.ArgSettings.html  enum.ErrorKind.html  enum.Shell.html  index.html  macro._clap_count_exprs.html  macro.app_from_crate.html  macro.arg_enum.html  macro.clap_app.html  macro.crate_authors.html  macro.crate_description.html  macro.crate_name.html  macro.crate_version.html  macro.value_t.html  macro.value_t_or_exit.html  macro.values_t.html  macro.values_t_or_exit.html  struct.App.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Error.html  struct.OsValues.html  struct.SubCommand.html  struct.Values.html  type.Result.html
error_chain/: index.html  macro.bail.html  macro.ensure.html  macro.error_chain.html  macro.quick_main.html  struct.Backtrace.html  struct.DisplayChain.html  struct.Iter.html  trait.ChainedError.html  trait.ExitCode.html
examples/: 05_write_coil.rs  06_write_single_register.rs  LICENSE  README.md  bandwidth-client.rs  bandwidth-client.rs_  bandwidth-server-many-up.rs  bandwidth-server-many-up.rs_  bandwidth-server-one.rs  bandwidth-server-one.rs_  bandwidth-test.sh  discover.rs  master-unsafe.rs  master.rs  random-test-client.rs  random-test-client.rs_  random-test-server.rs  random-test-server.rs__  random-test.sh  read_bits.rs  read_coils.rs  read_registers.rs  send_raw.rs  send_raw_request.rs  simple-client.rs  simple-client.rs_  simple-server.rs  simple-server.rs_  simple-test.sh  simple.sh  test-client-tcp.rs  test-receive-segfault.rs  test-server-tcp-pi.rs  test-server-tcp-pi.rs_  test-server-tcp.rs  test-server-tcp.rs_  test_memory_leaks.rs  unit-test-client.rs  unit-test-client.rs_  unit-test-server.rs  (+9 more)
failure/: macro.bail.html  struct.Causes.html
libc/: constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ACCOUNTING.html  constant.ADFS_SUPER_MAGIC.html  constant.AFFS_SUPER_MAGIC.html  constant.AF_IB.html  constant.AF_MPLS.html  constant.AF_NFC.html  constant.AF_VSOCK.html  constant.AIO_ALLDONE.html  constant.AIO_CANCELED.html  constant.AIO_NOTCANCELED.html  constant.AI_ADDRCONFIG.html  constant.AI_ALL.html  constant.AI_CANONNAME.html  constant.AI_NUMERICHOST.html  constant.AI_NUMERICSERV.html  constant.AI_PASSIVE.html  constant.AI_V4MAPPED.html  constant.ALT_DIGITS.html  constant.AM_STR.html  constant.AT_EMPTY_PATH.html  constant.AT_FDCWD.html  (+2264 more)
libmodbus/: libmodbus.html  modbus_close.html  modbus_connect.html  modbus_flush.html  modbus_free.html  modbus_get_byte_from_bits.html  modbus_get_byte_timeout.html  modbus_get_float.html  modbus_get_float_abcd.html  modbus_get_float_badc.html  modbus_get_float_cdab.html  modbus_get_float_dcba.html  modbus_get_header_length.html  modbus_get_response_timeout.html  modbus_get_slave.html  modbus_get_socket.html  modbus_mapping_free.html  (+46 more)
libmodbus-sys/: Cargo.toml  bindings.rs  build.rs  lib.rs  wrapper.h
(+1413 files in other folders)
