[package]
name = "libmodbus"
version = "1.0.0"
authors = ["Stefan Müller <co@zzeroo.com>"]
readme = "README.md"
keywords = ["modbus", "libmodbus"]
documentation = "http://zzeroo.github.io/libmodbus-rs/libmodbus_rs/index.html"
repository = "https://github.com/zzeroo/libmodbus-rs.git"
homepage = "http://zzeroo.github.io/libmodbus-rs"
description = "libmodbus bindings for Rust"
license = "LGPL-2.1" # same as libmodbus
categories = ["api-bindings"]
edition = "2018"

[badges]
travis-ci = { repository = "zzeroo/libmodbus-rs" }

[dependencies]
failure = "0.1.8"
libc = "0.2.80"
libmodbus-sys = { path = "libmodbus-sys", version = "0.9.5" }
rand = "0.7.3"
time = "0.2.22"

[dependencies.clap]
version = "2.33"
default-features = false
features = [ "color" ]
