[package]
name = "libmodbus-sys"
version = "1.0.0"
authors = ["Stefan Müller <co@zzeroo.com>"]
build = "build.rs"
keywords = ["modbus", "libmodbus"]
documentation = "http://zzeroo.github.io/libmodbus-rs/libmodbus_rs/index.html"
repository = "https://github.com/zzeroo/libmodbus-rs.git"
homepage = "http://zzeroo.github.io/libmodbus-rs"
description = """
FFI bindings to the libmodbus C library.
"""
license = "LGPL-2.1" # same as libmodbus
edition = "2018"

[lib]
name = "libmodbus_sys"
path = "lib.rs"

[dependencies]
libc = "0.2.80"

[build-dependencies]
bindgen = "0.55.1"
cc = "1.0"
pkg-config = "0.3.19"